[package]
name = "baobab"
version = "0.1.0"
authors = ["Sujay Jayakar <sujayakar@dropbox.com>"]
edition = "2018"

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true

[dependencies]
hashbrown = "0.6.3"

[dependencies.packed_simd]
version = "0.3.3"
features = ["into_bits"]

[dev-dependencies]
quickcheck = "0.8.0"
quickcheck_macros = "0.8.0"
rand = "0.7.2"